<?xml version="1.0"?>
<package format="2">
  <name>iqr_sz_description</name>
  <version>0.0.0</version>
  <description>The iqr_sz_description package</description>

  <author email="lei.yan@iquotient-robot.com">QuartzYan</author>
  <maintainer email="lei.yan@iquotient-robot.com">QuartzYan</maintainer>

  <!-- LICENSE -->
  <license>MIT</license>

  <!-- DEPEND -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>husky_description</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>husky_description</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>husky_description</exec_depend>
  <exec_depend>urdf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
